--- a/index.html
+++ b/index.html
@@ -37,19 +37,16 @@
         target="_blank"
         class="memory"
       >
-        <small>20 de março de 2023</small>
-        <h1>Jornada do Zero à Primeira Vaga</h1>
+        <small>01/03/2022</small>
+        <h1>Portfólio - Praticando e em busca do primeiro emprego</h1>
         <div>
           <img
             src="./assets/jornada.png"
-            alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga"
+            alt="Colocar logo do meu portfólio ou criar logo da sua marca pessoal."
           />
         </div>
         <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique...
+          Aqui é onde finalmente coloco meus conhecimentos em prática. Criando projetos do zero e praticando sempre para conseguir meu primeiro emprego de Front-End React.
         </p>
       </a>
 
@@ -58,40 +55,34 @@
         target="_blank"
         class="memory"
       >
-        <small>20 de março de 2023</small>
-        <h1>Jornada do Zero à Primeira Vaga</h1>
+        <small>20/01/2022</small>
+        <h1>Rocketseat - Aprimorando os conhecimentos em Front-End</h1>
         <div>
           <img
-            src="./assets/jornada.png"
-            alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga"
+            src="./assets/rocketseat.png"
+            alt="Logo da Rocketseat"
           />
         </div>
         <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique...
+          Conheci a rocketseat em 2019 e comecei e estudar o discover em 2022. Diego fernandes Jakeline Graciely, Mayk Brito sempre super didático e firme quando tem que ser. E como o mestre brito mesmo disse: "Se eu conseguir ser programador, você também consegue! Ponto final."
         </p>
       </a>
 
       <a
-        href="https://felipe-castelli-mellao.vercel.app/"
+        href="https://www.twitch.tv/marcobrunodev"
         target="_blank"
         class="memory"
       >
-        <small>20 de março de 2023</small>
-        <h1>Jornada do Zero à Primeira Vaga</h1>
+        <small>20/12/2018</small>
+        <h1>Collabcode - Rumo a jornada de tecnologia e estudos Front-End</h1>
         <div>
           <img
-            src="./assets/jornada.png"
-            alt="Rodrigo e Mayk apresentando o evento Jornada do Zero à Primeira Vaga"
+            src="./assets/collabcode.png"
+            alt="Logo da collabcode"
           />
         </div>
         <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique...
+          Aqui foi onde tudo começou em dezembro de 2018. Iniciei meus estudos em Front-End com ajuda do professor MarcoBrunoDev. E com ele consegui aprender muitas coisas de Front-End. Conheci pessoas também, pude fazer muito networking graças a essa comunidade.
         </p>
       </a>
     </nav>
